[package]
name = "proxyster-lib"
version = "0.1.1"
edition = "2021"
description = "The proxyster library and utilities"
license = "GPL-3.0"
homepage = "https://github.com/AirOne01/proxyster-lib"
repository = "https://github.com/AirOne01/proxyster-lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
regex = "1.7.1"
reqwest = "0.11.14"
scraper = "0.14.0"
serde = "1.0.152"
serde_derive = "1.0.149"
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.2"
